<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmov.railwaysportugal.MainActivity">





    <ScrollView android:id="@+id/mainscrool_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout android:id="@+id/main_form" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/logo_img"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/logo_img" />

        <Button android:id="@+id/networkmap" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/action_networkmap"
            android:textStyle="bold" />

        <Button android:id="@+id/searchbuy" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/action_searchandbuy"
            android:textStyle="bold" />

        <Button android:id="@+id/timetables" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/action_timetables"
            android:textStyle="bold" />

        <Button android:id="@+id/yourtickets" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/action_yourtickets"
            android:textStyle="bold" />


    </LinearLayout>
    </ScrollView>

</LinearLayout>
